# movie-bot

./: .black  .flake8  .gitignore  .isort.cfg  config.py  pre-commit  pyproject.toml  schemas.py  setup.py
api/: __init__.py  abstract.py  schemas.py
api/ivi/: api.py  schemas.py
api/kinopoisk/: __init__.py  api.py
database/: __init__.py  database.db  database.py  models.py  services.py
