[tool.poetry]
name = "cinemabot"
version = "0.1.0"
description = ""
authors = ["Vchslv-Zkhrv <vchslv.zkhrv@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
loguru = "^0.7.2"
python-dotenv = "^1.0.0"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
aiosqlite = "^0.19.0"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
